# fractal-creator

./: CMakeLists.txt  README.md  create.sh  todo.md
src/: abstract_image.cpp  abstract_image.h  burning_ship_fractal.cpp  burning_ship_fractal.h  button.cpp  button.h  color.cpp  color.h  image_creator.cpp  image_creator.h  input_controller.cpp  input_controller.h  julia_fractal.cpp  julia_fractal.h  main.cpp  mandelbrot_image.cpp  mandelbrot_image.h  math_util.h  prof_timer.cpp  prof_timer.h  renderer.cpp  renderer.h  sierpinski_carpet.cpp  sierpinski_carpet.h  simple_image.cpp  simple_image.h  slider.cpp  slider.h  ui_callback.cpp  ui_callback.h  ui_element.cpp  ui_element.h
